<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        style="@style/TextViewStyle1"
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/text_15dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/tv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        style="@style/TextViewStyle1"
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/text_20dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        style="@style/TextViewStyle1"
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/text_25dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/tv4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        style="@style/TextViewStyle1"
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/text_30dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv3" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btg_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:flow_horizontalBias="0.5"
        app:singleSelection="true">

        <Button
            android:id="@+id/btg_light"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.CustomColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light" />

        <Button
            android:id="@+id/btg_dark"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.CustomColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/student_creds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>